--- a/Debt Minder - Intacct/Debt Minder - Intacct.csproj
+++ b/Debt Minder - Intacct/Debt Minder - Intacct.csproj
@@ -5,6 +5,8 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>Debt_Minder___Intacct</RootNamespace>
+    <UserSecretsId>a984a38b-85ae-412e-a83f-b64df6ea3d6c</UserSecretsId>
+    <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
@@ -15,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
